--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -17,7 +17,7 @@
                   <a class="nav-link text-white sidebar-link"
                      routerLink="/ai/dashboard"
                      routerLinkActive="active">
-                      <i class="fas fa-tachometer-alt me-2"></i> Dashboard
+                      <i class="fas fa-home me-2"></i> Dashboard
                   </a>
               </li>
 
@@ -25,23 +25,44 @@
                   <a class="nav-link text-white sidebar-link"
                      routerLink="/ai/article"
                      routerLinkActive="active">
-                      <i class="fas fa-pen-nib me-2"></i> Write Article
+                     <i class="fa-solid fa-pen-to-square"></i> Write Article
                   </a>
               </li>
 
               <li class="nav-item">
                   <a class="nav-link text-white sidebar-link"
-                     routerLink="/blog-title"
+                     routerLink="/ai/blog-title"
                      routerLinkActive="active">
-                      <i class="fas fa-heading me-2"></i> Blog Title
+                      <i class="fa-solid fa-hashtag"></i> Blog Title
+                  </a>
+              </li>
+               <li class="nav-item">
+                  <a class="nav-link text-white sidebar-link"
+                     routerLink="/ai/image-generate"
+                     routerLinkActive="active">
+                      <i class="fa-regular fa-image"></i> Generate Images
+                  </a>
+              </li>
+               <li class="nav-item">
+                  <a class="nav-link text-white sidebar-link"
+                     routerLink="/ai/remove-background"
+                     routerLinkActive="active">
+                     <i class="fa-solid fa-eraser"></i> Remove background
+                  </a>
+              </li>
+               <li class="nav-item">
+                  <a class="nav-link text-white sidebar-link"
+                     routerLink="/ai/remove-object"
+                     routerLinkActive="active">
+                      <i class="fa-solid fa-scissors"></i> Remove Object
                   </a>
               </li>
 
               <li class="nav-item">
                   <a class="nav-link text-white sidebar-link"
-                     routerLink="/removeObject"
+                     routerLink="/ai/resume-review"
                      routerLinkActive="active">
-                      <i class="fas fa-tools me-2"></i> Remove Object
+                     <i class="fa-regular fa-file-lines"></i> Review Resume
                   </a>
               </li>
 
