--- a/src/app/article/article.html
+++ b/src/app/article/article.html
@@ -1,8 +1,38 @@
 
-
-
-
-
 <div class="container-fluid ">
-  article
+   <div class="row">
+      <!-- left -->
+
+    <div class="col-md-6">
+      <form action="" class="card shadow p-4">
+        <div>
+          <h3 class="text-primary fw-bold mb-5">Article Writing</h3>
+        </div>
+           <div>
+               <label class="fw-bolder" for="article">Article Topic</label>
+               <input id="article" type="text" class="form-control my-2"  placeholder="Search For Your Article Topic" required>
+           </div>
+            <p>Article Length</p>
+           <div class="d-flex flex-wrap">
+
+           
+            @for (item of articleLength; track $index) {
+              <span (click)="selectedLength(item)" class="px-3 border  py-2 rounded-5 mx-2" [ngClass]="{'bg-primary text-light' : lengthSelect === item.length  }">{{item?.text}}</span>
+            }
+           </div>
+           <button  class="btn btn-primary my-4"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</button>
+      </form>
+    </div>
+    <!-- right -->
+    <div class="col-md-6">
+      <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+
+           <h4  class="text-primary"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</h4>
+               <div class="d-flex align-items-center justify-content-center flex-column h-100">
+                      <i  class="fa-solid fa-pen-to-square mx-2 fs-1 text-secondary"></i>
+                      <p class="my-3 fw-bolder text-secondary">Enter A Topic Na Click " Generate Topic " to Get Start</p>
+               </div>
+      </div>
+    </div>
+   </div>
 </div>
