login register complete

--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -2,7 +2,7 @@
 
   <!-- Sidebar (Always fixed on the left) -->
   <div class="sidebar-container bg-dark d-flex flex-column"
-       style="width: 250px; min-height: 100vh;">
+       style="min-width: 250px; min-height: 100vh;">
 
       <div class="sidebar-header p-4 border-bottom border-secondary text-center">
           <h4 class="text-white fw-bold mb-0">
