--- a/src/app/remove-object/remove-object.html
+++ b/src/app/remove-object/remove-object.html
@@ -1,1 +1,35 @@
-<p>remove-object works!</p>
+
+<div class="container-fluid ">
+   <div class="row">
+      <!-- left -->
+
+    <div class="col-md-6">
+      <form action="" class="card shadow p-4">
+        <div>
+          <h3 class="text-primary fw-bold mb-5">Object  Removal</h3>
+        </div>
+           <div>
+               <label class="fw-semibold" for="article">Upload Image</label>
+               <input id="article" type="file" class="form-control my-2"  accept="image/*" placeholder="Search For Your Blog  Title" required>
+           </div>
+             <div>
+               <label class="fw-semibold" for="article">Descibe Object Name To Remove</label>
+           <textarea rows="4" id="article" type="text" class="form-control my-2"  placeholder="Describe What You Want To See In The Image" required></textarea>
+           </div>
+          
+           <button  class="btn btn-primary my-4"><i class="fa-solid fa-scissors mx-2"></i>Remove Object</button>
+      </form>
+    </div>
+    <!-- right -->
+    <div class="col-md-6">
+      <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+
+           <h4  class="text-primary"><i class="fa-solid fa-hashtag mx-2"></i>Processed Image</h4>
+               <div class="d-flex align-items-center justify-content-center flex-column h-100">
+                      <i  class="fa-solid fa-scissors mx-2 fs-1 text-secondary"></i>
+                      <p class="my-3 fw-semibold text-secondary">Upload An Image and Click " Remove Object " to Get Started</p>
+               </div>
+      </div>
+    </div>
+   </div>
+</div>
