--- a/src/app/article/article.html
+++ b/src/app/article/article.html
@@ -9,10 +9,10 @@
           <h3 class="text-primary fw-bold mb-5">Article Writing</h3>
         </div>
            <div>
-               <label class="fw-bolder" for="article">Article Topic</label>
+               <label class="fw-semibold" for="article">Article Topic</label>
                <input id="article" type="text" class="form-control my-2"  placeholder="Search For Your Article Topic" required>
            </div>
-            <p>Article Length</p>
+            <p class="fw-semibold">Article Length</p>
            <div class="d-flex flex-wrap">
 
            
@@ -30,7 +30,7 @@
            <h4  class="text-primary"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</h4>
                <div class="d-flex align-items-center justify-content-center flex-column h-100">
                       <i  class="fa-solid fa-pen-to-square mx-2 fs-1 text-secondary"></i>
-                      <p class="my-3 fw-bolder text-secondary">Enter A Topic Na Click " Generate Topic " to Get Start</p>
+                      <p class="my-3 fw-semibold text-secondary">Enter A Topic Na Click " Generate Topic " to Get Start</p>
                </div>
       </div>
     </div>
