--- a/src/app/auth/auth.html
+++ b/src/app/auth/auth.html
@@ -9,22 +9,22 @@
                 Sign in to continue your content creation journey.
             </p>
 
-            <form>
+            <form [formGroup]="loginForm" (ngSubmit)="loginUSer()">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" 
+                    <input formControlName="email"  type="email" class="form-control" id="email" 
                            placeholder="you@example.com" required 
-                           ngModel name="email">
+                          >
                 </div>
 
                 <div class="mb-4">
-                    <label for="password" class="form-label d-flex justify-content-between">
+                    <label  for="password" class="form-label d-flex justify-content-between">
                         <span>Password</span>
                         <a href="#" class="text-decoration-none small">Forgot Password?</a>
                     </label>
-                    <input type="password" class="form-control" id="password" 
+                    <input formControlName="password" type="password" class="form-control" id="password" 
                            placeholder="••••••••" required 
-                           ngModel name="password">
+                           >
                 </div>
 
                 <div class="form-check mb-4">
@@ -60,30 +60,30 @@
                 Start your 7-day free trial now. No credit card required.
             </p>
 
-            <form>
+            <form [formGroup]="registeForm" (ngSubmit)="registerUser()"hj>
                 <div class="mb-3">
-                    <label for="name" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" id="name" 
+                    <label  for="name" class="form-label">Full Name</label>
+                    <input formControlName="username" type="text" class="form-control" id="name" 
                            placeholder="John Doe" required 
-                           ngModel name="name">
+                            >
                 </div>
                 
                 <div class="mb-3">
                     <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" 
+                    <input formControlName="email" type="email" class="form-control" id="email" 
                            placeholder="you@example.com" required 
-                           ngModel name="email">
+                            >
                 </div>
 
                 <div class="mb-4">
                     <label for="password" class="form-label">Choose a Password</label>
-                    <input type="password" class="form-control" id="password" 
+                    <input formControlName="password" type="password" class="form-control" id="password" 
                            placeholder="min. 8 characters" required 
-                           ngModel name="password">
+                           >
                 </div>
 
                 <div class="d-grid gap-2 mb-3">
-                    <button type="submit" class="btn btn-primary btn-lg auth-btn">
+                    <button  type="submit" class="btn btn-primary btn-lg auth-btn">
                         Sign Up for Free
                     </button>
                 </div>
@@ -93,12 +93,12 @@
                     <a href="#" class="text-decoration-none">Terms and Conditions</a>.
                 </p>
 
-                <p class="text-center mt-4">
+                
+            </form>
+                  <p class="text-center mt-4">
                     Already have an account? 
                     <a type="button"  (click)="goSignIn()" class="fw-bold text-decoration-none">Sign In</a>
                 </p>
-            </form>
-
         </div>
     </div>
 </div>
