--- a/src/app/blog-title/blog-title.html
+++ b/src/app/blog-title/blog-title.html
@@ -1,1 +1,38 @@
-<p>blog-title works!</p>
+
+<div class="container-fluid ">
+   <div class="row">
+      <!-- left -->
+
+    <div class="col-md-6">
+      <form action="" class="card shadow p-4">
+        <div>
+          <h3 class="text-primary fw-bold mb-5">Ai Title Generator</h3>
+        </div>
+           <div>
+               <label class="fw-semibold" for="article">KeyWord</label>
+               <input id="article" type="text" class="form-control my-2"  placeholder="Search For Your Blog  Title" required>
+           </div>
+            <p class="fw-semibold">Category</p>
+           <div class="d-flex flex-wrap">
+
+           
+            @for (item of blogCategory; track $index) {
+              <span (click)="selectedLength(item)" class="px-3 border  py-2 rounded-5 mx-2 my-2" [ngClass]="{'bg-primary text-light' : lengthSelect == item }">{{item}}</span>
+            }
+           </div>
+           <button  class="btn btn-primary my-4"><i class="fa-solid fa-hashtag mx-2"></i>Generate Title</button>
+      </form>
+    </div>
+    <!-- right -->
+    <div class="col-md-6">
+      <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+
+           <h4  class="text-primary"><i class="fa-solid fa-hashtag mx-2"></i>Generated Title</h4>
+               <div class="d-flex align-items-center justify-content-center flex-column h-100">
+                      <i  class="fa-solid fa-hashtag mx-2 fs-1 text-secondary"></i>
+                      <p class="my-3 fw-semibold text-secondary">Enter A Topic and Click " Generated Title " to Get Start</p>
+               </div>
+      </div>
+    </div>
+   </div>
+</div>
