--- a/src/app/remove-background/remove-background.html
+++ b/src/app/remove-background/remove-background.html
@@ -1,1 +1,39 @@
-<p>remove-background works!</p>
+
+<div class="container-fluid ">
+   <div class="row">
+      <!-- left -->
+
+    <div class="col-md-6">
+      <form action="" class="card shadow p-4">
+        <div>
+          <h3 class="text-primary fw-bold mb-5">Background Removal</h3>
+        </div>
+           <div>
+               <label class="fw-semibold" for="article">Upload Image</label>
+               <input id="article" type="file" class="form-control my-2"  accept="image/*" placeholder="Search For Your Blog  Title" required>
+               <p  style="font-size: 12px;" class="fw-light text-secondary">Support JPg PNG and Other Image Formats</p>
+           </div>
+            <!-- <p class="fw-semibold">Category</p> -->
+           <div class="d-flex flex-wrap">
+
+           
+            <!-- @for (item of blogCategory; track $index) {
+              <span (click)="selectedLength(item)" class="px-3 border  py-2 rounded-5 mx-2 my-2" [ngClass]="{'bg-primary text-light' : lengthSelect == item }">{{item}}</span>
+            } -->
+           </div>
+           <button  class="btn btn-primary my-4"><i class="fa-solid fa-eraser mx-2"></i>Remove Background</button>
+      </form>
+    </div>
+    <!-- right -->
+    <div class="col-md-6">
+      <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+
+           <h4  class="text-primary"><i class="fa-solid fa-hashtag mx-2"></i>Processed Image</h4>
+               <div class="d-flex align-items-center justify-content-center flex-column h-100">
+                      <i  class="fa-solid fa-eraser mx-2 fs-1 text-secondary"></i>
+                      <p class="my-3 fw-semibold text-secondary">Upload An Image and Click " Remove Background " to Get Started</p>
+               </div>
+      </div>
+    </div>
+   </div>
+</div>
