--- a/src/app/review-resume/review-resume.html
+++ b/src/app/review-resume/review-resume.html
@@ -1,1 +1,35 @@
-<p>review-resume works!</p>
+<div class="container-fluid ">
+    <div class="row">
+        <!-- left -->
+
+        <div class="col-md-6">
+            <form action="" class="card shadow p-4">
+                <div>
+                    <h3 class="text-primary fw-bold mb-5">Resume Reviewer</h3>
+                </div>
+                <div>
+                    <label class="fw-semibold" for="article">Upload Resume</label>
+                    <input id="article" type="file" class="form-control my-2" accept="application/pdf"
+                        placeholder="Search For Your Blog  Title" required>
+                </div>
+
+                <p style="font-size: 12px;" class="fw-light text-secondary">Support PDF Formats Only</p>
+
+
+                <button class="btn btn-primary my-4"><i class="fa-solid  fa-file-lines mx-2"></i>Review Resume</button>
+            </form>
+        </div>
+        <!-- right -->
+        <div class="col-md-6">
+            <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+
+                <h4 class="text-primary"><i class="fa-solid fa-hashtag mx-2"></i>Analyse Result</h4>
+                <div class="d-flex align-items-center justify-content-center flex-column h-100">
+                 <i class="fa-solid  fa-file-lines mx-2 fs-1 text-secondary"></i>
+                    <p class="my-3 fw-semibold text-secondary">Upload An Image and Click " Remove Object " to Get
+                        Started</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
