--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -83,7 +83,7 @@
                   </div>
               </div>
 
-              <button class="btn btn-outline-secondary btn-sm">
+              <button (click)="logOut()" class="btn btn-outline-secondary btn-sm">
                   <i class="fa-solid fa-right-from-bracket"></i>
               </button>
 
