--- a/src/app/article/article.html
+++ b/src/app/article/article.html
@@ -9,8 +9,8 @@
           <h3 class="text-primary fw-bold mb-5">Article Writing</h3>
         </div>
            <div>
-               <label class="fw-semibold" for="article">Article Topic</label>
-               <input id="article" type="text" class="form-control my-2"  placeholder="Search For Your Article Topic" required>
+               <label  class="fw-semibold" for="article">Article Topic</label>
+               <input [(ngModel)]="prompt" name="prompt" id="article" type="text" class="form-control my-2"  placeholder="Search For Your Article Topic" required>
            </div>
             <p class="fw-semibold">Article Length</p>
            <div class="d-flex flex-wrap">
@@ -20,17 +20,34 @@
               <span (click)="selectedLength(item)" class="px-3 border  py-2 rounded-5 mx-2" [ngClass]="{'bg-primary text-light' : lengthSelect === item.length  }">{{item?.text}}</span>
             }
            </div>
-           <button  class="btn btn-primary my-4"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</button>
+           <button (click)="generateArticle()"  class="btn btn-primary my-4">
+            @if(loader){
+              <div class="spinner-border text-light fs-5" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+            }
+            @else { <i class="fa-solid fa-pen-to-square mx-2"></i>}
+           Generate Article
+          </button>
       </form>
     </div>
     <!-- right -->
     <div class="col-md-6">
-      <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+      <div class="card shadow p-5" style="max-height: 600px; height: 100%;" >
 
-           <h4  class="text-primary"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</h4>
+                 <h4  class="text-primary"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</h4>
+
                <div class="d-flex align-items-center justify-content-center flex-column h-100">
-                      <i  class="fa-solid fa-pen-to-square mx-2 fs-1 text-secondary"></i>
+                @if (!article) {
+                  <i  class="fa-solid fa-pen-to-square mx-2 fs-1 text-secondary"></i>
                       <p class="my-3 fw-semibold text-secondary">Enter A Topic Na Click " Generate Topic " to Get Start</p>
+                }
+                @else {
+                <pre class="article-text w-100">
+              {{ article }}
+        </pre>
+                }
+                      
                </div>
       </div>
     </div>
