--- a/src/app/blog-title/blog-title.html
+++ b/src/app/blog-title/blog-title.html
@@ -10,7 +10,7 @@
         </div>
            <div>
                <label class="fw-semibold" for="article">KeyWord</label>
-               <input id="article" type="text" class="form-control my-2"  placeholder="Search For Your Blog  Title" required>
+               <input [(ngModel)]="prompt" name="prompt" id="article" type="text" class="form-control my-2"  placeholder="Search For Your Blog  Title" required>
            </div>
             <p class="fw-semibold">Category</p>
            <div class="d-flex flex-wrap">
@@ -20,17 +20,34 @@
               <span (click)="selectedLength(item)" class="px-3 border  py-2 rounded-5 mx-2 my-2" [ngClass]="{'bg-primary text-light' : lengthSelect == item }">{{item}}</span>
             }
            </div>
-           <button  class="btn btn-primary my-4"><i class="fa-solid fa-hashtag mx-2"></i>Generate Title</button>
+               <button (click)="blogTitle()"  class="btn btn-primary my-4">
+            @if(loader){
+              <div class="spinner-border text-light fs-5" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+            }
+            @else { <i class="fa-solid fa-pen-to-square mx-2"></i>}
+           Generate Article
+          </button>
       </form>
     </div>
     <!-- right -->
-    <div class="col-md-6">
-      <div class="card shadow p-5" style="max-height: 600px; height: 100%;">
+     <div class="col-md-6">
+      <div class="card shadow p-5" style="max-height: 600px; height: 100%;" >
 
-           <h4  class="text-primary"><i class="fa-solid fa-hashtag mx-2"></i>Generated Title</h4>
+                 <h4  class="text-primary"><i class="fa-solid fa-pen-to-square mx-2"></i>Generate Article</h4>
+
                <div class="d-flex align-items-center justify-content-center flex-column h-100">
-                      <i  class="fa-solid fa-hashtag mx-2 fs-1 text-secondary"></i>
-                      <p class="my-3 fw-semibold text-secondary">Enter A Topic and Click " Generated Title " to Get Start</p>
+                @if (!blogTitles) {
+                  <i  class="fa-solid fa-pen-to-square mx-2 fs-1 text-secondary"></i>
+                      <p class="my-3 fw-semibold text-secondary">Enter A Topic Na Click " Generate Topic " to Get Start</p>
+                }
+                @else {
+                <pre class="blog-text w-100">
+              {{ blogTitles }}
+        </pre>
+                }
+                      
                </div>
       </div>
     </div>
